--- a/ig.html
+++ b/ig.html
@@ -5,10 +5,10 @@
     <body>
        <header class="flex-container navigation">
             <div>
-                <a>
+                <a href="#">
                     <img src="img/logo.png" alt="Logo" class="iconlogo">
                 </a>
-                <a>
+                <a href="#">
                     Instagram
                 </a>
             </div>
@@ -18,17 +18,17 @@
            <nav>
                 <ul class="flex-container">
                     <li>
-                        <a>
+                        <a href="#">
                             <img src="img/explore.png" alt="Explore" class="icon">
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="#">
                             <img src="img/like.png" alt="Notifications" class="icon">
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="#">
                             <img src="img/acc.png" alt="Profile" class="icon">
                         </a>
                     </li>
@@ -36,80 +36,90 @@
            </nav>
        </header>
        <main id="feed">
-            <div>
-                <a>
+            <div class="grid-profile-feed">
+                <a href="#" class="profile-pic">
                     <img src="img/tasty.jpg" alt="PP" class="profile-kecil">
                 </a>
-                <a class="profilename">
+                <a class="profile-name" href="#">
                     Profile Name
                 </a>
             </div>
             <figure>
                 <img src="img/tasty.jpg" alt="Picture" class="picture">
             </figure>
-            <div>
-                <a>
+            <div class="captions-icon">
+                <a href="#">
                     <img src="img/like.png" alt="Like" class="icon">
                 </a>
-                <a>
+                <a href="#">
                     <img src="img/comment.png" alt="Comment" class="icon">
                 </a>
-                <a class="right">
+                <a class="right" href="#">
                     <img src="img/bo.png" alt="Bookmark" class="icon">
                 </a>
             </div>
-            <div>
-                Likes
+            <div class="captions">
+                <a href="#">
+                    Likes
+                </a>
             </div>
-            <div>
-                <a>Profile Name</a>
+            <div class="captions">
+                <a class="profile-name" href="#">Profile Name</a>
                 <a>Caption</a>
             </div>
-            <div>
-                Comments
+            <div class="captions">
+                <a href="#">
+                    Comments
+                </a>
             </div>
-            <div>
-                Time Posted
+            <div class="captions">
+                <a>
+                    Time Posted
+                </a>
             </div>
-            <div class="commentbox">
+            <div class="commentbox captions">
                 <form>
                     <input type="text" placeholder="Add Comment..." class="inputcomment">
                 </form>
-                <a class="right"> 
+                <a class="right" href="#"> 
                     <img src="img/setting.png" alt="Settings" class="icon">
                 </a>
             </div>
         </main>
        <aside id="stories">
-            <div class="storyhead">
-                <img src="img/tasty.jpg" alt="PP" class="profile-gede">
-                <a>Profile Name</a>
-                <a>Bio</a>
+            <div class="storyhead grid-profile-story">
+                <a href="#" class="profile-pic">
+                    <img src="img/tasty.jpg" alt="PP" class="profile-gede">
+                </a>
+                <a class="profile-name" href="#">
+                    Profile Name
+                </a>
+                <a class="desc">Bio</a>
             </div>
             <div>
                 <a>Stories</a>
-                <a>Watch All</a>
+                <a href="#" class="right">Watch All</a>
             </div>
-            <div>
-                <a>
+            <div class="grid-profile-story">
+                <a class="profile-pic">
                     <img src="img/tasty.jpg" alt="PP" class="profile-gede">
                 </a>
-                <a>Profile Name</a>
-                <a>Time Posted</a>
+                <a class="profile-name">Profile Name</a>
+                <a class="desc">Time Posted</a>
             </div>
             <footer>
                 <div>
-                    <a>About Us</a>
-                    <a>Support</a>
-                    <a>Press</a>
-                    <a>API</a>
-                    <a>Jobs</a>
-                    <a>Privacy</a>
-                    <a>Terms</a>
-                    <a>Directory</a>
-                    <a>Profiles</a>
-                    <a>Hashtags</a>
-                    <a>Language</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Support</a>
+                    <a href="#">Press</a>
+                    <a href="#">API</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Directory</a>
+                    <a href="#">Profiles</a>
+                    <a href="#">Hashtags</a>
+                    <a href="#">Language</a>
                 </div>
                 <div>
                     2018 INSTAGRAM
